--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,9 @@ footer {
 
 footer a {
   color: #885df1;
+  text-decoration: none;
 }
 footer a:hover {
   color: rgb(111, 76, 202);
+  text-decoration: underline;
 }
