--- a/src/style.css
+++ b/src/style.css
@@ -20,13 +20,24 @@ h1 {
   color: #272044;
 }
 
-form {
-  padding: 30px;
+.form-container {
+  padding: 15px 20px;
   background-color: white;
   border-radius: 10px;
-  display: flex;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   margin-bottom: 30px;
+}
+
+form {
+  display: flex;
+}
+
+.hint {
+  line-height: 1.5;
+  margin-top: 10px;
+  opacity: 0.6;
+  font-size: 12px;
+  margin-left: 10px;
 }
 
 .instructions {
@@ -72,4 +83,23 @@ footer a {
 footer a:hover {
   color: rgb(111, 76, 202);
   text-decoration: underline;
+}
+
+.hidden {
+  display: none;
+}
+
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
